<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sw_bg"
    tools:context="com.semenchuk.search.presentation.search.SearchFragment">

    <SearchView
        android:id="@+id/searchView"
        style="@style/SearchViewStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:elevation="10dp"
        android:iconifiedByDefault="false"
        android:paddingHorizontal="30dp"
        android:textColorHint="@color/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <RadioButton
            android:id="@+id/people_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/people"
            android:paddingHorizontal="10dp"
            android:text="@string/people"
            android:textColor="@drawable/radio_color_selector" />

        <RadioButton
            android:id="@+id/starship_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:drawableLeft="@drawable/starship"
            android:paddingHorizontal="10dp"
            android:text="@string/starship"
            android:textColor="@drawable/radio_color_selector" />

        <RadioButton
            android:id="@+id/planets_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:drawableLeft="@drawable/planets"
            android:paddingHorizontal="10dp"
            android:text="@string/planets"
            android:textColor="@drawable/radio_color_selector" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:textColor="@drawable/radio_color_selector"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/search_people_list_item" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="@id/search_list"
        app:layout_constraintStart_toStartOf="@id/search_list"
        app:layout_constraintTop_toBottomOf="@id/search_list"
        app:layout_constraintTop_toTopOf="@id/search_list" />


</androidx.constraintlayout.widget.ConstraintLayout>